--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "react-dom": "^15.6.1",
     "react-scripts": "0.9.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.70.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
